--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
           - "8080:80"
     volumes:
         - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-        - ./yeticave:/var/www/html
+        - ./src:/var/www/html
   php:
     image: php:8.3.28-fpm
     volumes:
-        - ./yeticave:/var/www/html
+        - ./src:/var/www/html
