--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,9 +32,14 @@ server {
         add_header Content-Type application/javascript;
     }
 
-    location ~ \.(jpg|jpeg|gif|png|ico|svg)$ {
+    location ~ \.(jpg|jpeg|gif|png|ico)$ {
         root /var/www/html;
         add_header Content-Type image/jpeg; # Or image/png, etc.
+    }
+
+    location ~ \.svg$ {
+        root /var/www/html;
+        add_header Content-Type image/svg+xml; # Or image/png, etc.
     }
 }
 }
