--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 services:
+  mysql:
+    image: mysql:latest
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+    restart: always
+    volumes:
+      - ./init_db:/docker-entrypoint-initdb.d
   nginx:
     image: nginx:latest
     ports:
-          - "8080:80"
+      - '8080:80'
     volumes:
-        - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-        - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./src:/var/www/html
   php:
-    image: php:8.3.28-fpm
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-        - ./src:/var/www/html
+      - ./src:/var/www/html
