--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
     restart: always
     volumes:
-      - ./src/db:/docker-entrypoint-initdb.d
+      - ./src/init_db:/docker-entrypoint-initdb.d
   nginx:
     image: nginx:latest
     ports:
